--- a/asteroids.html
+++ b/asteroids.html
@@ -9,21 +9,49 @@
   <body>
     <canvas id="asteroidsCanvas" width="700" height="500"></canvas>
     <script>
-        const FPS = 60; 
+      const FPS = 60;
+      const SHIP_SIZE = 30;
       /** @type {HTMLCanvasElement} */
       var canv = document.getElementById("asteroidsCanvas");
       var ctx = canv.getContext("2d");
+
+      var ship = {
+        x: canv.width / 2,
+        y: canv.height / 2,
+        r: SHIP_SIZE / 2,
+        a: (90 / 180) * Math.PI, // face up converted to radians
+      };
       // set up the game loop
       setInterval(update, 1000 / FPS);
 
       function update() {
-          // draw space
+        // draw space
+        ctx.fillStyle = "black";
+        ctx.fillRect(0, 0, canv.width, canv.height);
+        // draw ship
+        ctx.strokeStyle = "white";
+        ctx.lineWidth = SHIP_SIZE / 40;
+        ctx.beginPath();
+        ctx.moveTo(
+          // nose of the ship
+          ship.x + ship.r * Math.cos(ship.a),
+          ship.y - ship.r * Math.sin(ship.a)
+        );
+        ctx.lineTo(
+          // rear left
+          ship.x - ship.r * (Math.cos(ship.a) + Math.sin(ship.a)),
+          ship.y + ship.r * (Math.sin(ship.a) - Math.cos(ship.a))
+        );
+        ctx.lineTo(
+          // rear right
+          ship.x - ship.r * (Math.cos(ship.a) - Math.sin(ship.a)),
+          ship.y + ship.r * (Math.sin(ship.a) + Math.cos(ship.a))
+        );
+        ctx.closePath();
+        ctx.stroke();
+        // rotate ship
 
-          // draw ship
-
-          // rotate ship
-
-          // move the ship
+        // move the ship
       }
     </script>
   </body>
