--- a/asteroids.html
+++ b/asteroids.html
@@ -9,8 +9,11 @@
   <body>
     <canvas id="asteroidsCanvas" width="700" height="500"></canvas>
     <script>
-      const FPS = 60;
+      const FPS = 30;
+      const FRICTION = 0.7; // friction coefficient (0 = no friction)
       const SHIP_SIZE = 30;
+      const SHIP_THRUST = 5; // ship acceleration in pixels per second
+      const TURN_SPEED = 360; // rotation speed in degrees per second
       /** @type {HTMLCanvasElement} */
       var canv = document.getElementById("asteroidsCanvas");
       var ctx = canv.getContext("2d");
@@ -20,38 +23,90 @@
         y: canv.height / 2,
         r: SHIP_SIZE / 2,
         a: (90 / 180) * Math.PI, // face up converted to radians
+        rot: 0,
+        thrusting: false,
+        thrust: {
+          x: 0,
+          y: 0,
+        },
       };
+      // set up event handlers
+      document.addEventListener("keydown", keyDown);
+      document.addEventListener("keyup", keyUp);
+
       // set up the game loop
       setInterval(update, 1000 / FPS);
+
+      function keyDown(/** @type {keyboardEvent}*/ ev) {
+        switch (ev.keyCode) {
+          case 37: //left arrow (rotate ship left)
+            ship.rot = ((TURN_SPEED / 180) * Math.PI) / FPS;
+            break;
+          case 38: //up arrow (accelerate the ship)
+            ship.thrusting = true;
+            break;
+          case 39: //right arrow (rotate ship right)
+            ship.rot = ((-TURN_SPEED / 180) * Math.PI) / FPS;
+            break;
+        }
+      }
+
+      function keyUp(/** @type {keyboardEvent}*/ ev) {
+        switch (ev.keyCode) {
+          case 37: //left arrow (stop rotating left)
+            ship.rot = 0;
+            break;
+          case 38: //up arrow (stop the ship)
+            ship.thrusting = false;
+            break;
+          case 39: //right arrow (stop rotating right)
+            ship.rot = 0;
+            break;
+        }
+      }
 
       function update() {
         // draw space
         ctx.fillStyle = "black";
         ctx.fillRect(0, 0, canv.width, canv.height);
+        // thrust the ship
+        if (ship.thrusting) {
+          ship.thrust.x += (SHIP_THRUST * Math.cos(ship.a)) / FPS;
+          ship.thrust.y -= (SHIP_THRUST * Math.sin(ship.a)) / FPS;
+        } else {
+          ship.thrust.x -= (FRICTION * ship.thrust.x) / FPS;
+          ship.thrust.y -= (FRICTION * ship.thrust.y) / FPS;
+        }
+
         // draw ship
         ctx.strokeStyle = "white";
         ctx.lineWidth = SHIP_SIZE / 40;
         ctx.beginPath();
         ctx.moveTo(
           // nose of the ship
-          ship.x + ship.r * Math.cos(ship.a),
-          ship.y - ship.r * Math.sin(ship.a)
+          ship.x + (4 / 3) * ship.r * Math.cos(ship.a),
+          ship.y - (4 / 3) * ship.r * Math.sin(ship.a)
         );
         ctx.lineTo(
           // rear left
-          ship.x - ship.r * (Math.cos(ship.a) + Math.sin(ship.a)),
-          ship.y + ship.r * (Math.sin(ship.a) - Math.cos(ship.a))
+          ship.x - ship.r * ((2 / 3) * Math.cos(ship.a) + Math.sin(ship.a)),
+          ship.y + ship.r * ((2 / 3) * Math.sin(ship.a) - Math.cos(ship.a))
         );
         ctx.lineTo(
           // rear right
-          ship.x - ship.r * (Math.cos(ship.a) - Math.sin(ship.a)),
-          ship.y + ship.r * (Math.sin(ship.a) + Math.cos(ship.a))
+          ship.x - ship.r * ((2 / 3) * Math.cos(ship.a) - Math.sin(ship.a)),
+          ship.y + ship.r * ((2 / 3) * Math.sin(ship.a) + Math.cos(ship.a))
         );
         ctx.closePath();
         ctx.stroke();
         // rotate ship
-
+        ship.a += ship.rot;
         // move the ship
+        ship.x += ship.thrust.x;
+        ship.y += ship.thrust.y;
+        // centre of the ship
+        ctx.fillStyle = "white";
+        ctx.fillRect(ship.x - 1, ship.y - 1, 1, 1);
       }
     </script>
   </body>
