asteroids random  printer done

--- a/asteroids.html
+++ b/asteroids.html
@@ -11,6 +11,11 @@
     <script>
       const FPS = 30;
       const FRICTION = 0.7; // friction coefficient (0 = no friction)
+      const ROID_JAG = 0.4; // 
+      const ROIDS_NUM = 10; // starting number of asteroids
+      const ROIDS_SIZE = 50; // starting size of asteroids in pixels
+      const ROIDS_VERT = 10; // average number of vertices on each asteroid
+      const ROIDS_SPD = 50; // max starting speed of asteroids in pixels per second
       const SHIP_SIZE = 30;
       const SHIP_THRUST = 5; // ship acceleration in pixels per second
       const TURN_SPEED = 360; // rotation speed in degrees per second
@@ -30,12 +35,34 @@
           y: 0,
         },
       };
+
+      // set up asteroids
+      var roids = [];
+      createAsteroidsBelt();
+
+
       // set up event handlers
       document.addEventListener("keydown", keyDown);
       document.addEventListener("keyup", keyUp);
 
       // set up the game loop
       setInterval(update, 1000 / FPS);
+
+      function createAsteroidsBelt() {
+        roids = [];
+        var x, y;
+        for (var i = 0; i < ROIDS_NUM; i++) {
+           do {
+            x = Math.floor(Math.random() * canv.width);
+            y = Math.floor(Math.random() * canv.height);
+           } while(distBetweenPoints(ship.x, ship.y, x, y) < ROIDS_SIZE * 2 + ship.r);
+            roids.push(newAsteroid(x, y));
+        }
+      }
+
+      function distBetweenPoints(x1, y1, x2, y2){
+        return Math.sqrt(Math.pow(x2 - x1, 2) + Math.pow(y2 - y1, 2));
+      };
 
       function keyDown(/** @type {keyboardEvent}*/ ev) {
         switch (ev.keyCode) {
@@ -65,6 +92,19 @@
         }
       }
 
+      function newAsteroid(x, y){
+          var roid = {
+            x: x,
+            y: y,
+            xv: Math.random() * ROIDS_SPD / FPS * (Math.random() < 0.5 ? 1 : -1),
+            yv: Math.random() * ROIDS_SPD / FPS * (Math.random() < 0.5 ? 1 : -1),
+            r: ROIDS_SIZE / 2,
+            a: Math.random() * Math.PI * 2, // in radians
+            vert: Math.floor(Math.random() * (ROIDS_VERT + 1) + ROIDS_VERT / 2)
+          };
+          return roid;
+      }
+
       function update() {
         // draw space
         ctx.fillStyle = "black";
@@ -80,8 +120,10 @@
           ctx.beginPath();
           ctx.moveTo(
             // rear left
-            ship.x - ship.r * ((2 / 3) * Math.cos(ship.a) + 0.5 * Math.sin(ship.a)),
-            ship.y + ship.r * ((2 / 3) * Math.sin(ship.a) - 0.5 * Math.cos(ship.a))
+            ship.x -
+              ship.r * ((2 / 3) * Math.cos(ship.a) + 0.5 * Math.sin(ship.a)),
+            ship.y +
+              ship.r * ((2 / 3) * Math.sin(ship.a) - 0.5 * Math.cos(ship.a))
           );
           ctx.lineTo(
             // rear centre behind the ship
@@ -90,8 +132,10 @@
           );
           ctx.lineTo(
             // rear right
-            ship.x - ship.r * ((2 / 3) * Math.cos(ship.a) - 0.5 * Math.sin(ship.a)),
-            ship.y + ship.r * ((2 / 3) * Math.sin(ship.a) + 0.5 * Math.cos(ship.a))
+            ship.x -
+              ship.r * ((2 / 3) * Math.cos(ship.a) - 0.5 * Math.sin(ship.a)),
+            ship.y +
+              ship.r * ((2 / 3) * Math.sin(ship.a) + 0.5 * Math.cos(ship.a))
           );
           ctx.closePath();
           ctx.fill();
@@ -122,6 +166,39 @@
         );
         ctx.closePath();
         ctx.stroke();
+
+        // draw the asteroids
+        ctx.strokeStyle = "white";
+        ctx.lineWidth = SHIP_SIZE / 30;
+        var x, y, r, a, vert;
+        for (var i = 0; i < roids.length; i++){
+            x = roids[i].x;
+            y = roids[i].y;
+            r = roids[i].r;
+            a = roids[i].a;
+            vert = roids[i].vert;
+
+            //draw apath
+            ctx.beginPath();
+            ctx.moveTo(
+                x + r * Math.cos(a),
+                y + r * Math.sin(a)
+            );
+            //draw the polygon
+            for(var j = 0; j - vert; j++){
+                ctx.lineTo(
+                    x + r * Math.cos(a + j * Math.PI * 2 / vert),
+                    y + r * Math.sin(a + j * Math.PI * 2 / vert)
+                );
+            }
+            ctx.closePath();
+            ctx.stroke();
+            //move the asteroid
+
+            //handle edge of screen
+
+
+        }
         // rotate ship
         ship.a += ship.rot;
         // move the ship
