--- a/asteroids.html
+++ b/asteroids.html
@@ -11,9 +11,9 @@
     <script>
       const FPS = 30;
       const FRICTION = 0.7; // friction coefficient (0 = no friction)
-      const ROID_JAG = 0.4; // 
+      const ROID_JAG = 0.4; // jaggedness of the asteroids (0 = none)
       const ROIDS_NUM = 10; // starting number of asteroids
-      const ROIDS_SIZE = 50; // starting size of asteroids in pixels
+      const ROIDS_SIZE = 60; // starting size of asteroids in pixels
       const ROIDS_VERT = 10; // average number of vertices on each asteroid
       const ROIDS_SPD = 50; // max starting speed of asteroids in pixels per second
       const SHIP_SIZE = 30;
@@ -100,7 +100,12 @@
             yv: Math.random() * ROIDS_SPD / FPS * (Math.random() < 0.5 ? 1 : -1),
             r: ROIDS_SIZE / 2,
             a: Math.random() * Math.PI * 2, // in radians
-            vert: Math.floor(Math.random() * (ROIDS_VERT + 1) + ROIDS_VERT / 2)
+            vert: Math.floor(Math.random() * (ROIDS_VERT + 1) + ROIDS_VERT / 2),
+            offs: []
+          };
+          // create the vertex offsets array
+          for (var i = 0; i < roid.vert; i++){
+            roid.offs.push(Math.random() * ROID_JAG * 2 + 1 - ROID_JAG);
           };
           return roid;
       }
@@ -168,36 +173,47 @@
         ctx.stroke();
 
         // draw the asteroids
-        ctx.strokeStyle = "white";
-        ctx.lineWidth = SHIP_SIZE / 30;
-        var x, y, r, a, vert;
+        ctx.strokeStyle = "grey";
+        ctx.lineWidth = SHIP_SIZE / 50;
+        var x, y, r, a, vert, offs;
         for (var i = 0; i < roids.length; i++){
             x = roids[i].x;
             y = roids[i].y;
             r = roids[i].r;
             a = roids[i].a;
             vert = roids[i].vert;
+            offs = roids[i].offs;
 
             //draw apath
             ctx.beginPath();
             ctx.moveTo(
-                x + r * Math.cos(a),
-                y + r * Math.sin(a)
+                x + r * offs[0] * Math.cos(a),
+                y + r * offs[0] * Math.sin(a)
             );
             //draw the polygon
-            for(var j = 0; j - vert; j++){
+            for(var j = 1; j - vert; j++){
                 ctx.lineTo(
-                    x + r * Math.cos(a + j * Math.PI * 2 / vert),
-                    y + r * Math.sin(a + j * Math.PI * 2 / vert)
+                    x + r * offs[j] * Math.cos(a + j * Math.PI * 2 / vert),
+                    y + r * offs[j] * Math.sin(a + j * Math.PI * 2 / vert)
                 );
             }
             ctx.closePath();
             ctx.stroke();
+
             //move the asteroid
-
+            roids[i].x += roids[i].xv;
+            roids[i].y += roids[i].yv;
             //handle edge of screen
-
-
+            if (roids[i].x < 0 - roids[i].r){
+                roids[i].x = canv.width + roids[i].r;
+            } else if (roids[i].x > canv.width + roids[i].r) {
+                roids[i].x = 0 - roids[i].r
+            }
+            if (roids[i].y < 0 - roids[i].r){
+                roids[i].y = canv.height + roids[i].r;
+            } else if (roids[i].y > canv.height + roids[i].r) {
+                roids[i].y = 0 - roids[i].r
+            }
         }
         // rotate ship
         ship.a += ship.rot;
